fixed overflow in content section

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@
 
 #content {
   width: calc(100% - 300px);
-  overflow: auto;
+  overflow-y: auto;
 }
 
 /* * content - header */
@@ -124,18 +124,36 @@
 
 #footer {
   height: 100px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   color: var(--white);
 }
 
-/* footer-left */
-
-#footer .footer-left {
+#footer .footer-left,
+.footer-middle,
+.footer-right {
   padding: 1rem;
   display: flex;
   gap: 1rem;
   align-items: center;
+  /* flex-wrap: nowrap; */
+}
+
+#footer .action > i {
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+
+#footer .bar {
+  height: 5px;
+  border-radius: 30px;
+  background-color: var(--gray);
+}
+
+/* footer-left */
+
+#footer .footer-left {
 }
 
 #footer .footer-left .media > img {
@@ -146,11 +164,6 @@
   font-size: 1rem;
 }
 
-#footer .footer-left .action > i {
-  font-size: 1rem;
-  padding: 0.5rem;
-}
-
 #footer .footer-left .name > address {
   font-style: normal;
   font-weight: 100;
@@ -159,29 +172,26 @@
 
 /* footer-middle */
 
-#footer .footer-middle .action > i {
-  font-size: 1.5rem;
-  padding: 0.5rem;
+#footer .footer-middle {
+  flex-direction: column;
 }
 
-#footer .footer-middle .bar .line {
-  height: 5px;
-  border-radius: 30px;
-  background-color: var(--gray);
+#footer .footer-middle .action > i {
+  font-size: 1.2rem;
+}
+
+#footer .footer-middle .bar {
+  width: 100%;
 }
 
 /* footer-right */
-/* ! bring .action i and .bar .line in a single line of code */
 
-#footer .footer-right .action > i {
-  font-size: 1.5rem;
-  padding: 0.5rem;
+#footer .footer-right .action {
+  width: 40%;
 }
 
-#footer .footer-right .bar .line {
-  height: 5px;
-  border-radius: 30px;
-  background-color: var(--gray);
+#footer .footer-right .bar {
+  width: 60%;
 }
 
 /* ** responsive */
